--- a/tests/btn-mark/btn-mark.test.html
+++ b/tests/btn-mark/btn-mark.test.html
@@ -9,8 +9,7 @@
 	<script src="https://code.jquery.com/qunit/qunit-2.0.1.js"></script>
 	<script src="../lib/blanket.min.js"></script>
 	<script src="../lib/jquery.min.js"></script>
-
-	<script src="btn-normal.test.js"></script>
+	<script src="btn-mark.test.js"></script>
 </head>
 <body>
 	<div id="qunit"></div>
@@ -38,7 +37,7 @@
 	<tr></tr>
 	<td><button id="¡¸" disabled class="btn-mark">¡¸</button></td><td><button id="Mod" class="btn-mark">Mod</button></td>
 	<td><button id="CE" class="btn-mark">CE</button></td><td><button id="C" class="btn-mark">C</button></td>
-	<td><button id="¡ö" class="btn-mark">¡ö</button></td><td><button id="%" class="btn-mark">%</button></td>
+	<td><button id="back" class="btn-mark">¡ö</button></td><td><button id="%" class="btn-mark">%</button></td>
 	<tr></tr><td><button id="A" disabled class="btn-normal">A</button></td><td><button id="B" disabled class="btn-normal">B</button></td>
 	<td><button id="7" class="btn-normal">7</button></td><td><button id="8" class="btn-normal">8</button></td>
 	<td><button id="9" class="btn-normal">9</button></td><td><button id="x" class="btn-mark">x</button></td>
@@ -49,9 +48,9 @@
 	<td><button id="1" class="btn-normal">1</button></td><td><button id="2" class="btn-normal">2</button></td>
 	<td><button id="3" class="btn-normal">3</button></td><td><button id="+" class="btn-mark">+</button></td>
 	<tr></tr><td><button id="¡¸" disabled class="btn-mark">¡¸</button></td><td><button id="¡¸" disabled class="btn-mark">¡¸</button></td>
-	<td><button id="¡Ó" class="btn-mark">¡Ó</button></td><td><button id="0" class="btn-normal">0</button></td>
+	<td><button id="neg" class="btn-mark">¡Ó</button></td><td><button id="0" class="btn-normal">0</button></td>
 	<td><button id="¡¸" disabled class="btn-mark">¡¸</button></td><td>
-	<button id="=" class="btn-mark">=</button></td>
+	<button id="equ" class="btn-mark">=</button></td>
 	</table>
 	</div>
 	<h4 style="color:#E0E5D5" class="title">This caculator only support 16bit integer.</h4>
